--- a/src/Floream.People/Views/index.html
+++ b/src/Floream.People/Views/index.html
@@ -2,6 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>We Are</title>
+    <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light|Pacifico|Covered+By+Your+Grace|Gloria+Hallelujah' rel='stylesheet' type='text/css'>
+
+    <link href="/Content/styles/Style.css" rel="stylesheet" />
+
+    <script src="/Content/js/jquery.min.js"></script>
+    <script src="/Content/js/jquery.lazyload.min.js"></script>
+    <script src="/Content/js/jquery.mixitup.min.js"></script>
+    <script src="/Content/js/script.js"></script>
+
 </head>
 <body>
     <h1>Content Comming</h1>
