markup for homepage

--- a/src/Floream.People/Views/index.html
+++ b/src/Floream.People/Views/index.html
@@ -13,6 +13,79 @@
 
 </head>
 <body>
-    <h1>Content Comming</h1>
+    <header></header>
+    <section>
+        <div class="controls">
+            <label>Filter:</label>
+            <button class="filter" data-filter="all">All</button>
+            <button class="filter" data-filter=".sales">Sales Team</button>
+            <button class="filter" data-filter=".it">It Department</button>
+            <label>Sort:</label>
+            <button class="sort" data-sort="myorder:asc">Asc</button>
+            <button class="sort" data-sort="myorder:desc">Desc</button>
+        </div>
+        <div class="container" id="container">
+            <div class="col mix sales" data-myorder="1">
+                <div class="wrapper">
+                    <div class="img"><img src="Tom-Selleck.jpeg"></div>
+                    <div class="overlay"></div>
+                    <span>
+                        Tom Selleck 1<br />
+                        Sales Person<br />
+                        Sales Team
+                    </span>
+                </div>
+            </div>
+            <div class="col mix sales" data-myorder="2">
+                <div class="wrapper">
+                    <div class="img"><img src="Tom-Selleck.jpeg"></div>
+                    <div class="overlay"></div>
+                    <span>
+                        Tom Selleck 2<br />
+                        Sales Person<br />
+                        Sales Team
+                    </span>
+                </div>
+            </div>
+            <div class="col mix it" data-myorder="3">
+                <div class="wrapper">
+                    <div class="img"><img src="Tom-Selleck.jpeg"></div>
+                    <div class="overlay"></div>
+                    <span>
+                        Tom Selleck 3<br />
+                        Sales Person<br />
+                        Sales Team
+                    </span>
+                </div>
+            </div>
+            <div class="col mix it" data-myorder="4">
+                <div class="wrapper">
+                    <div class="img"><img src="Tom-Selleck.jpeg"></div>
+                    <div class="overlay"></div>
+                    <span>
+                        Tom Selleck 4<br />
+                        Sales Person<br />
+                        Sales Team
+                    </span>
+                </div>
+            </div>
+            <div class="col mix sales" data-myorder="5">
+                <div class="wrapper">
+                    <div class="img"><img src="Tom-Selleck.jpeg"></div>
+                    <div class="overlay"></div>
+                    <span>
+                        Tom Selleck 5<br />
+                        Sales Person<br />
+                        Sales Team
+                    </span>
+                </div>
+            </div>
+        </div>
+        </section>
+        <footer>
+            &copy; Floream 2016
+        </footer>
+
+
 </body>
 </html>
