--- a/src/Floream.People/Views/index.html
+++ b/src/Floream.People/Views/index.html
@@ -4,7 +4,7 @@
     <title>We Are</title>
     <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light|Pacifico|Covered+By+Your+Grace|Gloria+Hallelujah' rel='stylesheet' type='text/css'>
 
-    <link href="/Content/styles/Style.css" rel="stylesheet" />
+    <link href="/Content/css/Style.css" rel="stylesheet" />
 
     <script src="/Content/js/jquery.min.js"></script>
     <script src="/Content/js/jquery.lazyload.min.js"></script>
