Updated readme for db setup, removed auth from homepage, added connection strings

--- a/src/Floream.People/Views/login.html
+++ b/src/Floream.People/Views/login.html
@@ -3,7 +3,10 @@
 <head>
     <title></title>
 </head>
-<body>
-
-</body>
+    <body>
+        <form>
+            Username: <input name="username" type="text" /><br/>
+            Password: <input name="password" type="password" />
+        </form>
+    </body>
 </html>
