--- a/src/Floream.People/Views/login.html
+++ b/src/Floream.People/Views/login.html
@@ -4,9 +4,10 @@
     <title></title>
 </head>
     <body>
-        <form>
+        <form method="POST">
             Username: <input name="username" type="text" /><br/>
             Password: <input name="password" type="password" />
+            <button type="submit">Submit</button>
         </form>
     </body>
 </html>
