header and footer js and css

--- a/src/Floream.People/Views/index.cshtml
+++ b/src/Floream.People/Views/index.cshtml
@@ -3,8 +3,6 @@
     Layout = "Views/Shared/_Layout.cshtml";
 }
 
-
-
     <div class="controls">
         <label>Filter:</label>
         <button class="filter" data-filter="all">All</button>
@@ -14,9 +12,9 @@
         <button class="sort" data-sort="myorder:asc">Asc</button>
         <button class="sort" data-sort="myorder:desc">Desc</button>
     </div>
-    <div class="container" id="container">
+    <div id="container">
 
-        <div class="col mix sales" data-myorder="1">
+        <div class="col mix sales col-md-4" data-myorder="1">
             <div class="wrapper">
                 <div class="img"><img src="/Content/image/Tom-Selleck.jpeg"></div>
                 <div class="overlay"></div>
