--- a/src/Floream.People/Views/Shared/_Layout.cshtml
+++ b/src/Floream.People/Views/Shared/_Layout.cshtml
@@ -9,11 +9,18 @@
     <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light|Pacifico|Covered+By+Your+Grace|Gloria+Hallelujah' rel='stylesheet' type='text/css'>
 
     <link href="/Content/css/Style.css" rel="stylesheet" />
+    <link href="/Content/css/floream.css" rel="stylesheet" />
+    <link href="/Content/css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
 
     <script src="/Content/js/jquery.min.js"></script>
     <script src="/Content/js/jquery.lazyload.min.js"></script>
     <script src="/Content/js/jquery.mixitup.min.js"></script>
+    <script src="/Content/js/bootstrap.min.js"></script>
+    <script src="/Content/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="/Content/js/ie-emulation-modes-warning.js"></script>
     <script src="/Content/js/script.js"></script>
+
+
 
 </head>
 <body>
