--- a/src/Floream.People/Views/Login.cshtml
+++ b/src/Floream.People/Views/Login.cshtml
@@ -9,9 +9,10 @@
     <title></title>
 </head>
 <body>
-    <form>
+    <form method="post">
         Username: <input name="username" type="text" /><br />
         Password: <input name="password" type="password" />
+        <button type="submit">Login</button>
     </form>
 </body>
 </html>
