--- a/src/Floream.People/Views/Profile/Index.cshtml
+++ b/src/Floream.People/Views/Profile/Index.cshtml
@@ -5,42 +5,50 @@
 
 @inherits Nancy.ViewEngines.Razor.NancyRazorViewBase<Floream.People.DataSources.Entities.Person>
 
-<div class="row myInfo">
-    <div class="col-md-12">
-        <img class="avatar resize" id="avatarPic" />
-    </div>
-    <div class="col-md-12" style="padding-top:10px">
-        <input id="fileupload" type="file" name="files[]" hidden="true" style="display:none">
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
+<div id="container">
+    <div class="row myInfo">
+        <div class="col-md-12" id="myPic">
+            @Html.Partial("_Picture", Model)
+        </div>
         <br />
-        <div class="dummySmallSpace"></div>
-        <a href="#" id="btnOpenFileDialog" onclick="document.getElementById('fileupload').click(); return false;" class=" btn btn-primary">Change Picture</a>
-    </div>
-    <div class="col-md-6">
-        <p id="lblName">Name: </p>
-    </div>
-    <div class="col-md-6">
-        <p id="name">@Model.Name</p>
-    </div>
+        <br />
+        <br />
+        <div class="col-md-6">
+            <p id="lblName">Name: </p>
+        </div>
+        <div class="col-md-6">
+            <p id="name">@Model.Name</p>
+        </div>
 
-    <div class="col-md-6">
-        <p id="lblPosition">Position: </p>
-    </div>
-    <div class="col-md-6">
-        <p id="position">@Model.Position</p>
-    </div>
+        <div class="col-md-6">
+            <p id="lblPosition">Position: </p>
+        </div>
+        <div class="col-md-6">
+            <p id="position">@Model.Position</p>
+        </div>
 
-    <div class="col-md-6">
-        <p id="lblEmail">Email: </p>
-    </div>
-    <div class="col-md-6">
-        <p id="email">@Model.Email</p>
+        <div class="col-md-6">
+            <p id="lblEmail">Email: </p>
+        </div>
+        <div class="col-md-6">
+            <p id="email">@Model.Email</p>
+        </div>
     </div>
 </div>
-
 <script src="/Content/js//vendor/jquery.ui.widget.js"></script>
 <script src="/Content/js/jquery.iframe-transport.js"></script>
 <script src="/Content/js/jquery.fileupload.js"></script>
 
-@*<script>
-    $('#AvatarPic').attr("src", "/Images/Avatars/@Model.")
-</script>*@
+@if (Model.Picture != null)
+{
+    <script>
+        $('#avatarPic').attr("src", "data:image/@Model.PictureExtension;base64,@System.Convert.ToBase64String(Model.Picture)")
+    </script>
+}
