--- a/src/Floream.People/Views/index.cshtml
+++ b/src/Floream.People/Views/index.cshtml
@@ -27,7 +27,7 @@
             <div class="overlay"></div>
             <span>
                 @item.Name<br />
-                <a href="mailto:@item.Email"></a><br />
+                <a href="mailto:@item.Email">@item.Email</a><br />
                 @item.Position<br />
                 @item.Department<br />
             </span>
