--- a/src/Floream.People/Views/index.cshtml
+++ b/src/Floream.People/Views/index.cshtml
@@ -5,12 +5,15 @@
     Layout = "Views/Shared/_Layout.cshtml";
     var counter = 0;
 }
-
+<br /><br /><br /><br /><br />
 <div class="controls">
     <label>Filter:</label>
     <button class="filter" data-filter="all">All</button>
     <button class="filter" data-filter=".sales">Sales Team</button>
     <button class="filter" data-filter=".it">It Department</button>
+    <button class="filter" data-filter=".finance">Finance</button>
+    <button class="filter" data-filter=".hr">HR</button>
+    <button class="filter" data-filter=".learning">Learning</button>
     <label>Sort:</label>
     <button class="sort" data-sort="myorder:asc">Asc</button>
     <button class="sort" data-sort="myorder:desc">Desc</button>
@@ -19,7 +22,7 @@
 
     @foreach (var item in Model)
     {
-    <div class="col mix @item.Department col-md-4" data-myorder="@counter">
+    <div class="col mix @item.Department.ToLower() col-md-4" data-myorder="@counter">
         <div class="wrapper">
             <div class="img">
                 <img src="data:image/@item.PictureExtension;base64,@System.Convert.ToBase64String(item.Picture)" />
