--- a/src/Floream.People/Views/index.cshtml
+++ b/src/Floream.People/Views/index.cshtml
@@ -9,11 +9,11 @@
 <div class="controls">
     <label>Filter:</label>
     <button class="filter" data-filter="all">All</button>
-    <button class="filter" data-filter=".sales">Sales Team</button>
-    <button class="filter" data-filter=".it">It Department</button>
-    <button class="filter" data-filter=".finance">Finance</button>
-    <button class="filter" data-filter=".hr">HR</button>
-    <button class="filter" data-filter=".learning">Learning</button>
+    <button class="filter" data-filter=".SALES">Sales Team</button>
+    <button class="filter" data-filter=".IT">It Department</button>
+    <button class="filter" data-filter=".FINANCE">Finance</button>
+    <button class="filter" data-filter=".HR">HR</button>
+    <button class="filter" data-filter=".LEARNING">Learning</button>
     <label>Sort:</label>
     <button class="sort" data-sort="myorder:asc">Asc</button>
     <button class="sort" data-sort="myorder:desc">Desc</button>
@@ -22,10 +22,10 @@
 
     @foreach (var item in Model)
     {
-    <div class="col mix @item.Department.ToLower() col-md-4" data-myorder="@counter">
+    <div class="col mix @item.Department col-md-4" data-myorder="@counter">
         <div class="wrapper">
             <div class="img">
-                <img src="data:image/@item.PictureExtension;base64,@System.Convert.ToBase64String(item.Picture)" />
+                <img src="@(String.IsNullOrEmpty(item.PictureExtension) ? "/Content/image/default_avatar_150px.png" : String.Format("data:image/{0};base64,{1}",item.PictureExtension,Convert.ToBase64String(item.Picture)))" />
             </div>
             <div class="overlay"></div>
             <span>
