--- a/src/Floream.People/Views/Login.cshtml
+++ b/src/Floream.People/Views/Login.cshtml
@@ -1,19 +1,21 @@
-﻿@{
+﻿@inherits Nancy.ViewEngines.Razor.NancyRazorViewBase<string>
+@{
     ViewBag.Title = "Login ";
     Layout = "Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-    <br /><br /><br /><br /><br /><br />
-    <form method="post">
-        Username: <input name="username" type="text" /><br />
-        Password: <input name="password" type="password" />
-        <button type="submit">Login</button>
-    </form>
-</body>
-</html>
+<form class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4 login-form" method="POST">
+    <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" class="form-control" id="username" name="username" placeholder="Your windows username" autofocus="">
+    </div>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" name="password" placeholder="Your windows password">
+    </div>
+    <button type="submit" class="btn btn-primary btn-block">Submit</button>
+    @if (Model != null)
+    {
+        <div class="alert alert-danger">@Model</div>
+    }
+</form>
