--- a/src/Floream.People/Views/Profile/_Picture.cshtml
+++ b/src/Floream.People/Views/Profile/_Picture.cshtml
@@ -1,17 +1,16 @@
 ﻿@inherits Nancy.ViewEngines.Razor.NancyRazorViewBase<Floream.People.DataSources.Entities.Person>
 
-<h3>Avatar</h3>
-
-<div class="row myInfo">
-    <div class="col-md-12">
-        @*<img class="avatar img-circle resize" id="avatarPic" />*@
-        <img class="avatar resize" id="avatarPic" />
-    </div>
-    <div class="col-md-12" style="padding-top:10px">
-        <input id="fileupload" type="file" name="files[]" hidden="true" style="display:none">
-        <br />
-        <div class="dummySmallSpace"></div>
-        <a href="#" id="btnOpenFileDialog" onclick="document.getElementById('fileupload').click(); return false;" class=" btn btn-primary">Change Avatar</a>
+<div class="avatar">
+    <div class="row">
+        <div class="col-md-12">
+            <img id="avatarPic" />
+        </div>
+        <div class="col-md-12" style="padding-top: 10px">
+            <input id="fileupload" type="file" name="files[]" hidden="true" style="display: none">
+            <br />
+            <div class="dummySmallSpace"></div>
+            <a href="#" id="btnOpenFileDialog" onclick="document.getElementById('fileupload').click(); return false;" class=" btn btn-primary">Change Avatar</a>
+        </div>
     </div>
 </div>
 @if (Model.Picture != null) { 
@@ -21,7 +20,7 @@
 }
 <script>
     $(document).ready(function () {
-        debugger;
+        //debugger;
         $('#fileupload').fileupload({
             dataType: 'html',
             cache: false,
