--- a/src/Floream.People/Views/Shared/_Layout.cshtml
+++ b/src/Floream.People/Views/Shared/_Layout.cshtml
@@ -1,34 +1,23 @@
-﻿@{
+﻿@inherits Nancy.ViewEngines.Razor.NancyRazorViewBase<dynamic>
+@{
     Layout = null;
 }
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>We Are</title>
-    <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light|Pacifico|Covered+By+Your+Grace|Gloria+Hallelujah' rel='stylesheet' type='text/css'>
-
-    <link href="/Content/css/Style.css" rel="stylesheet" />
-    <link href="/Content/css/floream.css" rel="stylesheet" />
-    <link href="/Content/css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
-
-    <script src="/Content/js/jquery.min.js"></script>
-    <script src="/Content/js/jquery.lazyload.min.js"></script>
-    <script src="/Content/js/jquery.mixitup.min.js"></script>
-    <script src="/Content/js/bootstrap.min.js"></script>
-    <script src="/Content/js/ie10-viewport-bug-workaround.js"></script>
-    <script src="/Content/js/ie-emulation-modes-warning.js"></script>
-    <script src="/Content/js/script.js"></script>
-
-
-
+    <title>We Are Floream</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
+    <link href="/content/css/floream.css" rel="stylesheet"/>
+    <link href="/content/css/font-awesome.min.css" rel="stylesheet" />
+    <script src="/content/js/jquery.min.js"></script>
+    <script src="/content/js/bootstrap.min.js"></script>
+    <script src="/content/js/jquery.lazyload.min.js"></script>
+    <script src="/content/js/jquery.mixitup.min.js"></script>
+    <script src="/content/js/script.js"></script>
 </head>
-<body>
-    
-    <header>
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
+<body>   
+    <header class="header">
+        <nav class="navbar navbar-default navbar-fixed-top">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
@@ -37,42 +26,33 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="/">
-                    <img src="/Content/image/logo.png" alt="We are Floream" />
+                    <img src="/content/images/logo.png" alt="We are Floream" />
                 </a>
             </div>
-            <div id="navbar" class="collapse navbar-collapse pull-right">
+            <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/Profile">Profile</a></li>
-                    <li><a href="#">page 2</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li class="dropdown-header">Nav header</li>
-                            <li><a href="#">link</a></li>
-                            <li><a href="#">link</a></li>
-                        </ul>
+                    <li>
+                        @if (Context.CurrentUser == null)
+                        {
+                            <a href="/login">Login</a>
+                        }
+                        else
+                        {
+                            <a href="/logoff">Logoff</a>
+                        }
                     </li>
                 </ul>
-            </div><!--/.nav-collapse -->
-        </div>
-    </nav>
+            </div>
+        </nav>
     </header>
-
     <section>
         @RenderBody()
     </section>
-
     <footer class="footer">
-        <div class="container">
-            <p>I'm a footer</p>
+        <div class="text-center">
+            &copy; 2016 - Floream
         </div>
     </footer>
-
-
 </body>
 </html>
 
