--- a/src/Floream.People/Views/index.cshtml
+++ b/src/Floream.People/Views/index.cshtml
@@ -1,42 +1,37 @@
-﻿@inherits Nancy.ViewEngines.Razor.NancyRazorViewBase<List<Floream.People.Models.PersonProfile>>
+﻿@using Floream.People.Utils
+@inherits Nancy.ViewEngines.Razor.NancyRazorViewBase<List<Floream.People.DataSources.Entities.Person>>
 
 @{
-    ViewBag.Title = "Home Page ";
     Layout = "Views/Shared/_Layout.cshtml";
     var counter = 0;
 }
-<br /><br /><br /><br /><br />
-<div class="controls">
-    <label>Filter:</label>
-    <button class="filter" data-filter="all">All</button>
-    <button class="filter" data-filter=".sales">Sales Team</button>
-    <button class="filter" data-filter=".it">It Department</button>
-    <button class="filter" data-filter=".finance">Finance</button>
-    <button class="filter" data-filter=".hr">HR</button>
-    <button class="filter" data-filter=".learning">Learning</button>
-    <label>Sort:</label>
-    <button class="sort" data-sort="myorder:asc">Asc</button>
-    <button class="sort" data-sort="myorder:desc">Desc</button>
-</div>
-<div id="container">
 
-    @foreach (var item in Model)
-    {
-    <div class="col mix @item.Department.ToLower() col-md-4" data-myorder="@counter">
-        <div class="wrapper">
-            <div class="img">
-                <img src="data:image/@item.PictureExtension;base64,@System.Convert.ToBase64String(item.Picture)" />
-            </div>
-            <div class="overlay"></div>
-            <span>
-                @item.Name<br />
-                <a href="mailto:@item.Email">@item.Email</a><br />
-                @item.Position<br />
-                @item.Department<br />
+<div class="search">
+    <form method="POST" action="/search">
+        <div class="input-group">
+            <input type="text" class="form-control" name="query" id="query" placeholder="Search for someone&hellip;">
+            <span class="input-group-btn">
+                <button class="btn btn-default btn-search" type="submit"><i class="fa fa-search"></i></button>
             </span>
         </div>
-    </div>
-        counter++;
-    }
-
+    </form>
 </div>
+
+<ul class="polaroids list-unstyled list-inline">
+    @foreach (var item in Model)
+    {
+        <li>
+            <a href="#">
+                @if (item.Picture == null)
+                {
+                    <img alt="@item.Name" src="data:image/jpg;base64,@Constants.picStormTrooper" />
+                }
+                else
+                {
+                    <img alt="@item.Name" src="data:image/@item.PictureExtension;base64,@System.Convert.ToBase64String(item.Picture)" />
+                }
+            </a>
+            <span class="text-center">@item.Name</span>
+        </li>
+    }
+</ul>
