--- a/src/Floream.People/Content/css/floream.css
+++ b/src/Floream.People/Content/css/floream.css
@@ -1420,6 +1420,9 @@ ol ol {
   display: inline-block;
   padding-left: 5px;
   padding-right: 5px;
+  max-height:320px;
+  max-width:270px;
+  word-wrap: break-word;
 }
 dl {
   margin-top: 0;
