--- a/src/Floream.People/Views/Shared/_Layout.cshtml
+++ b/src/Floream.People/Views/Shared/_Layout.cshtml
@@ -41,6 +41,10 @@
                             <a href="/logoff">Logoff</a>
                         }
                     </li>
+                    <li>
+                        <a href="/profile">Profile</a>
+                    </li>
+
                 </ul>
             </div>
         </nav>
