--- a/src/Floream.People/Views/Shared/_Layout.cshtml
+++ b/src/Floream.People/Views/Shared/_Layout.cshtml
@@ -12,7 +12,8 @@
     <script src="/content/js/jquery.min.js"></script>
     <script src="/content/js/bootstrap.min.js"></script>
     <script src="/content/js/jquery.lazyload.min.js"></script>
-    <script src="/content/js/jquery.mixitup.min.js"></script>
+    <script src="/content/js/jquery.ui.widget.js"></script>
+    <script src="/content/js/jquery.fileupload.js"></script>
     <script src="/content/js/script.js"></script>
 </head>
 <body>   
@@ -41,10 +42,6 @@
                             <a href="/logoff">Logoff</a>
                         }
                     </li>
-                    <li>
-                        <a href="/profile">Profile</a>
-                    </li>
-
                 </ul>
             </div>
         </nav>
