--- a/src/Floream.People/Views/index.cshtml
+++ b/src/Floream.People/Views/index.cshtml
@@ -5,21 +5,8 @@
     Layout = "Views/Shared/_Layout.cshtml";
     var counter = 0;
 }
-@*
-    <br /><br /><br /><br /><br />
-    <div class="controls">
-        <label>Filter:</label>
-        <button class="filter" data-filter="all">All</button>
-        <button class="filter" data-filter=".SALES">Sales Team</button>
-        <button class="filter" data-filter=".IT">It Department</button>
-        <button class="filter" data-filter=".FINANCE">Finance</button>
-        <button class="filter" data-filter=".HR">HR</button>
-        <button class="filter" data-filter=".LEARNING">Learning</button>
-        <label>Sort:</label>
-        <button class="sort" data-sort="myorder:asc">Asc</button>
-        <button class="sort" data-sort="myorder:desc">Desc</button>
-*@
 
+<div class="container">
 <div class="search">
     <form method="POST" action="/search">
         <div class="input-group">
@@ -30,43 +17,23 @@
         </div>
     </form>
 
-    @*</div>*@
-
-    <ul class="polaroids list-unstyled list-inline">
-        @foreach (var item in Model)
-        {
-            @*<div class="col mix @item.Department col-md-4" data-myorder="@counter">
-                    <div class="wrapper">
-                        <div class="img">
-                            <img src="@(String.IsNullOrEmpty(item.PictureExtension) ? "/Content/image/default_avatar_150px.png" : String.Format("data:image/{0};base64,{1}",item.PictureExtension,Convert.ToBase64String(item.Picture)))" />
-                        </div>
-                        <div class="overlay"></div>
-                        <span>
-                            @item.Name<br />
-                            <a href="mailto:@item.Email">@item.Email</a><br />
-                            @item.Position<br />
-                            @item.Department<br />
-                        </span>
-                    </div>
-                </div>
-                    counter++;*@
-            <li>
+    <div class="polaroids"><div class="row">
+    @foreach (var item in Model)
+    {
+        <div class="col-xs-12 col-sm-4 col-md-3">
+            <div class="polariod">
                 <a href="#">
-                    <img alt="@item.Name" src='@Floream.People.Utils.HtmlHelper.GetProfileImage(item.Picture, item.PictureExtension)' />
+                    <img class="img-max" alt="@item.Name" src='@Floream.People.Utils.HtmlHelper.GetProfileImage(item.Picture, item.PictureExtension)' />
                 </a>
                 <span class="text-center">
                     @item.Name
                 </span>
                 <span class="text-center">
-                    <a href="mailto:@item.Email">@item.Email</a>
+                    <a href="mailto:@item.Email" class="mailme">@item.Email</a>
                 </span>
-                <span class="text-center">
-                    @item.Position<br />
-                </span>
-                <span class="text-center">
-                    @item.Department
-                </span>
-            </li>
-        }
-    </ul>
+            </div>
+        </div>
+    }
+</div></div>
+</div>
 </div>
